<resources>
    <string name="app_name">Order Tracking</string>
    <string name="image_order_placed">image order placed</string>
    <string name="order_placed">Order Placed</string>
    <string name="we_have_received_your_order">We have received your order</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="your_order_has_been_confirmed">Your order has been confirmed</string>
    <string name="order_processed">Order Processed</string>
    <string name="we_are_preparing_your_order">We are preparing your order</string>
    <string name="image_order_ready">image order ready</string>
    <string name="image_order_confirmed">image order confirmed</string>
    <string name="image_order_processed">image order processed</string>
    <string name="ready_for_pickup">Ready for Pickup</string>
    <string name="your_order_is_ready_for_pickup">Your order is ready for pickup</string>
    <string name="icon_back">icon back</string>
    <string name="track_order">Track Order</string>
    <string name="cancel">Cancel</string>
    <string name="estimated_time">Estimated Time</string>
    <string name="order_number">Order Number</string>
    <string name="thirty_minutes">30 minutes</string>
    <string name="code_order">#AC9807</string>
</resources>
